# InCache

./: .gitignore  CLAUDE.md  PROMPT.md  README.md  pyproject.toml
incache/: __main__.py  protocol.py  server.py  store.py
incache/commands/: __init__.py  hashes.py  lists.py  server.py  sets.py  strings.py
tests/: conftest.py
