[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "incache"
version = "0.1.0"
description = "A Redis-compatible in-memory database in pure Python"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "redis>=5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["incache*"]
